# s3-vectors-rs

./: .gitignore  CLI_README.md  Cargo.toml  Makefile  README.md
.github/workflows/: format.yml  release.yml
docs/: CREATE_INDEX.md  CREATE_VECTOR_BUCKET.md  DELETE_INDEX.md  DELETE_VECTORS.md  DELETE_VECTOR_BUCKET.md  DELETE_VECTOR_BUCKET_POLICY.md  GET_INDEX.md  GET_VECTORS.md  GET_VECTOR_BUCKET.md  GET_VECTOR_BUCKET_POLICY.md  LIST_INDEXES.md  LIST_VECTORS.md  LIST_VECTOR_BUCKETS.md  PUT_VECTORS.md  PUT_VECTOR_BUCKET_POLICY.md  QUERY_VECTORS.md
examples/: api_demo.rs  rag_demo.rs
scripts/: build-all.sh  homebrew-formula.rb  install.sh  update-homebrew-sha.sh  upload-release.sh
src/: auth.rs  config.rs  deploy.rs  document.rs  embeddings.rs  lib.rs  main.rs  rag.rs  types.rs  validation.rs
src/cli/: bucket.rs  index.rs  init.rs  install_models.rs  interactive.rs  mod.rs  output.rs  policy.rs  rag.rs  vector.rs
