[package]
name = "s3-vectors"
version = "0.1.0"
edition = "2021"
authors = ["Sigrid Jin <sigrid.jinhyung@gmail.com>"]
description = "AWS S3 Vectors CLI (Unofficial)"
repository = "https://github.com/sigridjineth/s3-vectors-rust"
homepage = "https://github.com/sigridjineth/s3-vectors-rust"
documentation = "https://github.com/sigridjineth/s3-vectors-rust"
readme = "README.md"
keywords = ["aws", "s3", "vectors", "embeddings", "similarity-search"]
categories = ["command-line-utilities", "web-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
anyhow = "1.0.98"
chrono = "0.4.41"
envy = "0.4.2"
hex = "0.4"
hmac = "0.12"
percent-encoding = "2.3"
reqwest = { version = "0.12.15", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "json",
    "stream",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread", "time", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
url = "2.5"

# ML and embedding dependencies
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.21.0"
hf-hub = "0.3.2"

# Document processing
rayon = "1.10.0"
walkdir = "2.5.0"
regex = "1.11.1"
crossbeam-channel = "0.5"
lazy_static = "1.5"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
tabled = "0.16"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"
dirs = "5.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.14.0"

[[example]]
name = "rag_demo"
required-features = []

# Release profile optimizations for smaller binaries
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller panic handler

# Binary configuration for cargo install
[[bin]]
name = "s3-vectors"
path = "src/main.rs"